# grieevio

./: .gitignore  DETAILED_PROJECT_REPORT.md  PROJECT_REPORT.md  README.md  SOURCE_CODE.md  admin.html  ai_engine.py  app.py  config.py  dashboard.html  deno.json  index.html  login.html  models.py  new_complaint.html  profile.html  pyproject.toml  pyrightconfig.json  register.html  requirements.txt  secret.url  seed_data.py  supabase_schema.sql  track.html  vercel.json
api/: index.py
static/css/: style.css
static/js/: admin.js  app.js  complaints.js  voice.js
supabase/functions/process-complaint/: index.ts
supabase/functions/verify-resolution/: index.ts
templates/: admin.html  dashboard.html  iloveyou.html  index.html  login.html  new_complaint.html  profile.html  register.html  track.html
