[project]
name = "grieevio"
version = "0.1.0"
description = "AI-powered civic complaint management system"
authors = [
    { name = "Ayesha Farheen" }
]
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "Flask-Login",
    "Flask-CORS",
    "langdetect",
    "googletrans==3.1.0a0",
    "SpeechRecognition",
    "opencv-python-headless",
    "numpy",
    "psycopg2-binary"
]

[tool.pyright]
include = ["."]
extraPaths = ["./"]
typeCheckingMode = "basic"
